♻️ [BE] refactor: 검색 결과에 작품 좋아요 정보도 포함해 조회해 오는 것으로 수정 (S12P21A505-219)